--- a/.github/workflows/master_lugaresdefiestas.yml
+++ b/.github/workflows/master_lugaresdefiestas.yml
@@ -46,6 +46,9 @@ jobs:
         with:
           name: node-app
 
+      - name: Azure Login
+        uses: Azure/login@v1
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
