--- a/.github/workflows/master_lugaresdefiestas.yml
+++ b/.github/workflows/master_lugaresdefiestas.yml
@@ -34,8 +34,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          #npm run test --if-present
+          yarn build
           
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
