--- a/.github/workflows/master_lugaresdefiestas.yml
+++ b/.github/workflows/master_lugaresdefiestas.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          yarn install
           yarn build
           
       - name: Zip artifact for deployment
